# ComfyUI-SopranoTTS

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
workflows/: soprano_tts_basic.json  soprano_tts_batch.json
